@startuml
class Customer {
  - id: string
  - name: string
  - email: string
  + getName(): string
  + getAccounts(): List<Account>
}

class Account {
  - id: string
  - balance: decimal
  - customerId: string
  + deposit(amount: decimal): void
  + withdraw(amount: decimal): void
  + getBalance(): decimal
}

class Transaction {
  - id: string
  - amount: decimal
  - type: string
  - timestamp: datetime
  - accountId: string
  + getAmount(): decimal
  + getType(): string
}

Customer "1" -- "*" Account : owns
Account "1" -- "*" Transaction : has
@enduml
